--- a/new_file.html
+++ b/new_file.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="{CHARSET}">
+		<meta charset="UTF-8">
 		<title></title>
 	</head>
 	<body>
-		今天很冷 吗，买些吃的蔬菜
 	</body>
 </html>
